# open-agent-tools-coder

./: .gitignore  .readthedocs.yaml  README.md  example-env.sh  pyproject.toml
docs/: Makefile  changelog.rst  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
docs/api/: index.rst  oats_agent.rst  oats_cli.rst  oats_core.rst  oats_git.rst  oats_hook.rst  oats_lsp.rst  oats_mcp.rst  oats_memory.rst  oats_oweb.rst  oats_plugins.rst  oats_provider.rst  oats_session.rst  oats_tool.rst  oats_top_level.rst  oats_trajectory.rst
oats/: AGENT.dir.python.tools.json  AGENT.python.tools.md  __init__.py  models.py  pp.py
oats/agent/: AGENT.dir.python.tools.json  AGENT.python.tools.md  __init__.py
oats/cli/: AGENT.dir.python.tools.json  AGENT.python.tools.md  __init__.py  credential_manager.py  interactive.py  scraper.py  validate_coder_env.py
oats/cli/cmd/: __init__.py  slash_json_command.py
oats/cli/tui/: AGENT.dir.python.tools.json  AGENT.python.tools.md  __init__.py  tui_utils.py
oats/core/: AGENT.dir.python.tools.json  AGENT.python.tools.md  profiles.py
oats/git/: AGENT.dir.python.tools.json  AGENT.python.tools.md  coauthor.py  git_diff_extractor.py
oats/hook/: AGENT.dir.python.tools.json  AGENT.python.tools.md  engine.py
oats/lsp/: AGENT.dir.python.tools.json  AGENT.python.tools.md
oats/mcp/: AGENT.dir.python.tools.json  AGENT.python.tools.md  __init__.py  config.py  index.py  intent.py  orchestrator.py  ranking.py  registry.py  resolver.py
oats/memory/: AGENT.dir.python.tools.json  AGENT.python.tools.md
oats/monit/: monitor_host.py
oats/oweb/: AGENT.dir.python.tools.json  AGENT.python.tools.md  __init__.py  login.py
oats/plugins/: AGENT.dir.python.tools.json  AGENT.python.tools.md  loader.py
oats/prompts/: build_new_slash_json_command.md
oats/prompts/tests/: test_slash_json.json
oats/provider/: AGENT.dir.python.tools.json  AGENT.python.tools.md  __init__.py
oats/s3/: download_file.py  download_s3_keys.py  download_s3_keys2.py  find_files1.py  find_files2.py  get_client.py  list_files_in_s3_subdir2.py  remove_file.py  upload_file.py
oats/session/: AGENT.dir.python.tools.json  AGENT.python.tools.md  models.py  screenshot_store.py  skill_selector.py
oats/tool/: AGENT.dir.python.tools.json  AGENT.python.tools.md  __init__.py  agent_tool.py  bash.py  edit.py  generate_readme.py  glob_tool.py  grep.py  lsp_tool.py  memory_tool.py  multiedit.py  patch.py  plan.py  playwright_search.py  question.py  read.py  registry.py  todowrite.py  tool_search.py  webfetch.py  websearch.py  write.py
oats/trajectory/: AGENT.dir.python.tools.json  AGENT.python.tools.md  report.py
stack/: build-docs.sh
