[project]
name = "oats-coder"
version = "1.0.14"
description = "Open Agent Tools (oats) enables small-to-large self-hosted ai models to use local source code when running tool-calling agentic workloads. We actively data mine 20,970+ (2+ TB) popular github repos using large and small ai models to create reuseable: json, markdown and parquet files for local-first tool-calling models."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "jay-johnson", email = 'jay.p.h.johnson@gmail.com'},
    { name = "jayjohnson", email = 'jay@districtsolutions.ai'},
]
keywords = ["ai", "tool-calling", "coding", "assistant", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]
dependencies = [
    "aiofiles",
    "autopep8",
    "black",
    "boto3",
    "fastapi",
    "fastparquet",
    "GitPython",
    "litellm==1.83.14",
    "prompt_toolkit",
    "pydantic",
    "pydantic-settings",
    "rank_bm25",
    "rich",
    "sse-starlette",
    "ujson",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "rich",
]

[project.scripts]
oat = "oats.cli.interactive:main"
ff = "oats.cli.interactive:main"
get-tools = "oats.agent_get_tool_choices_for_prompt:main"
pv = "oats.cli.check_providers:check_providers"
check-coder-env = "oats.cli.validate_coder_env:main"
setup-coder = "oats.setup_coder_config:main"

[project.urls]
Homepage = "https://openagent.tools/"
Documentation = "https://open-agent-tools-coder.readthedocs.io/"
Repository = "https://github.com/district-solutions/open-agent-tools-coder"

[tool.hatch.build.targets.wheel]
packages = ["oats"]
exclude = ["stack"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
